--- a/index.html
+++ b/index.html
@@ -22,5 +22,27 @@
         </div>
         </div>
     </div>
+    <div class="second-section"> 
+        <div class="second-section-title"><h2>Some random information</h2></div>
+        <div class="second-section-information">
+            <div class="second-section-img">
+                <img>
+                <div class="second-section-txt">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="second-section-img">
+                <img>
+                <div class="second-section-txt">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="second-section-img">
+                <img>
+                <div class="second-section-txt">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="second-section-img">
+                <img>
+                <div class="second-section-txt">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
