--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             </div>
         </div>
     </div>
+    <div class="third-section">
+        <p><em>This is an inpiring quote, or just a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is taht it looks nice.</em></p>
+        <p><b>-Thor, God of Thunder</b></p>
+    </div>
 
 </body>
 </html>
