--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
         <p><em>This is an inpiring quote, or just a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is taht it looks nice.</em></p>
         <p><b>-Thor, God of Thunder</b></p>
     </div>
+    <div class="fourth-section">
+        <div class="fourth-section-txt">
+            <p>Class to action! It's time!</p>
+            <p>Sign up for our product by clicking on that button right over there!</p>
+        </div>
+        <button class="fourth-section-bttn">Sign up</button>
+    </div>
 
 </body>
 </html>
