--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         </div>
         <button class="fourth-section-bttn">Sign up</button>
     </div>
-
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
 </body>
 </html>
