Divide main-section-one into left and right

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
             </ul>
         </div>
         <div class="main-section-one">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower constrast</p>
-            <button>Sign Up</button>
-            <img src="./images/placeholder-image.jpg"> 
+            <div class="main-secion-one-left">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower constrast</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="main-secion-one-right">
+                <img src="./images/placeholder-image.jpg"> 
+            </div>
         </div>
         
     </div>
