Add p around header logo in first-section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="first-section">
         <div class="header">
-            Header Logo
+            <p>Header Logo</p>
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
