--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             </ul>
         </div>
         <div class="main-section-one">
-            <div class="main-secion-one-left">
+            <div class="main-section-one-left">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower constrast</p>
                 <button>Sign Up</button>
             </div>
-            <div class="main-secion-one-right">
+            <div class="main-section-one-right">
                 <img src="./images/placeholder-image.jpg"> 
             </div>
         </div>
