Add img placeholder in second-section

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <div class="second-section-title"><h2>Some random information</h2></div>
         <div class="second-section-information">
             <div class="second-section-img">
-                <img>
+                <img src="./images/placeholder-image.jpg">
                 <div class="second-section-txt">this is some subtext under an illustration or image</div>
             </div>
             <div class="second-section-img">
-                <img>
+                <img src="./images/placeholder-image.jpg">
                 <div class="second-section-txt">this is some subtext under an illustration or image</div>
             </div>
             <div class="second-section-img">
-                <img>
+                <img src="./images/placeholder-image.jpg">
                 <div class="second-section-txt">this is some subtext under an illustration or image</div>
             </div>
             <div class="second-section-img">
-                <img>
+                <img src="./images/placeholder-image.jpg">
                 <div class="second-section-txt">this is some subtext under an illustration or image</div>
             </div>
         </div>
