--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
         </div>
     </div>
     <div class="third-section">
-        <p><em>This is an inpiring quote, or just a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is taht it looks nice.</em></p>
-        <p><b>-Thor, God of Thunder</b></p>
+        <div class="third-section-quote">
+        <p id="quote">This is an inpiring quote, or just a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <div class="test">
+            <p><b>-Thor, God of Thunder</b></p>
+        </div>
+        </div>
     </div>
     <div class="fourth-section">
         <div class="fourth-section-txt">
