Add modal in fourth-section

--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
         </div>
         </div>
     </div>
-    <div class="fourth-section">
-        <div class="fourth-section-txt">
-            <p>Class to action! It's time!</p>
-            <p>Sign up for our product by clicking on that button right over there!</p>
+    <div class="modal">
+        <div class="fourth-section">
+            <div class="fourth-section-txt">
+                <p>Class to action! It's time!</p>
+                <p>Sign up for our product by clicking on that button right over there!</p>
+            </div>
+            <button class="fourth-section-bttn">Sign up</button>
         </div>
-        <button class="fourth-section-bttn">Sign up</button>
     </div>
     <div class="footer">
         Copyright © The Odin Project 2021
