Add encapsulating div around all sections

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="first-section">
         <div class="header">
             <p>Header Logo</p>
             <ul>
@@ -16,6 +15,7 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
+    <div class="content">
         <div class="main-section-one">
             <div class="main-section-one-left">
                 <h1>This website is awesome</h1>
@@ -26,8 +26,6 @@
                 <img src="./images/placeholder-image.jpg"> 
             </div>
         </div>
-        
-    </div>
     <div class="second-section"> 
         <div class="second-section-title"><h2>Some random information</h2></div>
         <div class="second-section-information">
@@ -60,11 +58,12 @@
     <div class="modal">
         <div class="fourth-section">
             <div class="fourth-section-txt">
-                <p>Class to action! It's time!</p>
-                <p>Sign up for our product by clicking on that button right over there!</p>
+                <p id="call-to-action">Class to action! It's time!</p>
+                <p id="call-to-action-subtext">Sign up for our product by clicking on that button right over there!</p>
             </div>
             <button class="fourth-section-bttn">Sign up</button>
         </div>
+    </div>
     </div>
     <div class="footer">
         Copyright © The Odin Project 2021
